# IAMLeastPrivilegeGenerator

./: .editorconfig  .gitignore  .iamlp-allow.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
apiserver/: __init__.py  app.py
apiserver/routes/: __init__.py  generate.py  stats.py
cli/: __init__.py  config.py  main.py  output.py
core/: __init__.py  allowlist.py  constants.py  models.py
core/aggregator/: __init__.py  actions.py  conditions.py
core/inference/: __init__.py  arn_rules.py  resource_level.py
core/parser/: __init__.py  cloudtrail_reader.py  normalizer.py
core/policy/: __init__.py  diff.py  generator.py  simulator.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEMO.md  README.md
iamlp/: __init__.py
iamlp/apiserver/: __init__.py
iamlp/cli/: __init__.py  __main__.py
iamlp/core/: __init__.py
infra/cdk/: README.md  app.py
infra/sam-app/: README.md  buildspec.yml  template.yaml
infra/sam-app/src/: __init__.py  app.py
infra/terraform/: README.md  main.tf
pipeline/hooks/: predeploy_verify.py
policy-as-code/guard/: rules.guard
scripts/: pr_comment.py
tests/: test_aggregator.py  test_guard_rules.py  test_inference.py  test_parser.py  test_policy_generator.py  test_pr_comment.py  test_simulator.py
tests/.deps/cryptography-46.0.3.dist-info/: RECORD
tests/golden/: expected_scan.json  sample_allowlist.json  sample_pip_audit.json
tests/negative/: egress_any.json  env_plain.json  iam_star.json
ui/public/: index.html
(+3 files in other folders)
