[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iamleastprivilegegenerator"
version = "0.1.0"
description = "Serverless toolkit for analyzing CloudTrail activity and generating IAM least-privilege policies."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "IAM LP Team"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "moto", "boto3", "ruff", "black", "mypy"]

[project.urls]
homepage = "https://example.com/iamleastprivilegegenerator"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli", "core", "apiserver", "iamlp", "infra", "tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
